Remove client based dtos and use java-commons-dtos (#2211)