@@ -1,45 +1,43 @@
 package com.faforever.client.api;
 
 import com.faforever.client.FafClientApplication;
-import com.faforever.client.api.dto.AchievementDefinition;
-import com.faforever.client.api.dto.AchievementType;
-import com.faforever.client.api.dto.Clan;
-import com.faforever.client.api.dto.CoopMission;
-import com.faforever.client.api.dto.CoopResult;
-import com.faforever.client.api.dto.FeaturedModFile;
-import com.faforever.client.api.dto.Game;
-import com.faforever.client.api.dto.GameReview;
-import com.faforever.client.api.dto.Leaderboard;
-import com.faforever.client.api.dto.LeaderboardEntry;
-import com.faforever.client.api.dto.LeaderboardRatingJournal;
-import com.faforever.client.api.dto.Map;
-import com.faforever.client.api.dto.MapPoolAssignment;
-import com.faforever.client.api.dto.MapVersion;
-import com.faforever.client.api.dto.MapVersionReview;
-import com.faforever.client.api.dto.MatchmakerQueue;
-import com.faforever.client.api.dto.MeResult;
-import com.faforever.client.api.dto.Mod;
-import com.faforever.client.api.dto.ModReviewsSummary;
-import com.faforever.client.api.dto.ModVersion;
-import com.faforever.client.api.dto.ModVersionReview;
-import com.faforever.client.api.dto.ModerationReport;
-import com.faforever.client.api.dto.Player;
-import com.faforever.client.api.dto.PlayerAchievement;
-import com.faforever.client.api.dto.PlayerEvent;
-import com.faforever.client.api.dto.Tournament;
-import com.faforever.client.api.dto.TutorialCategory;
 import com.faforever.client.mod.FeaturedMod;
 import com.faforever.client.util.Tuple;
 import com.faforever.client.vault.search.SearchController.SearchConfig;
 import com.faforever.client.vault.search.SearchController.SortConfig;
+import com.faforever.commons.api.dto.AchievementDefinition;
+import com.faforever.commons.api.dto.AchievementType;
+import com.faforever.commons.api.dto.Clan;
+import com.faforever.commons.api.dto.CoopMission;
+import com.faforever.commons.api.dto.CoopResult;
+import com.faforever.commons.api.dto.FeaturedModFile;
+import com.faforever.commons.api.dto.Game;
+import com.faforever.commons.api.dto.GameReview;
+import com.faforever.commons.api.dto.Leaderboard;
+import com.faforever.commons.api.dto.LeaderboardEntry;
+import com.faforever.commons.api.dto.LeaderboardRatingJournal;
+import com.faforever.commons.api.dto.Map;
+import com.faforever.commons.api.dto.MapPoolAssignment;
+import com.faforever.commons.api.dto.MapVersion;
+import com.faforever.commons.api.dto.MapVersionReview;
+import com.faforever.commons.api.dto.MatchmakerQueue;
+import com.faforever.commons.api.dto.MeResult;
+import com.faforever.commons.api.dto.Mod;
+import com.faforever.commons.api.dto.ModReviewsSummary;
+import com.faforever.commons.api.dto.ModVersion;
+import com.faforever.commons.api.dto.ModVersionReview;
+import com.faforever.commons.api.dto.ModerationReport;
+import com.faforever.commons.api.dto.Player;
+import com.faforever.commons.api.dto.PlayerAchievement;
+import com.faforever.commons.api.dto.PlayerEvent;
+import com.faforever.commons.api.dto.Tournament;
+import com.faforever.commons.api.dto.TutorialCategory;
 import com.faforever.commons.io.ByteCountListener;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
 import java.nio.file.Path;
-import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -83,23 +81,12 @@ public class MockFafApiAccessor implements FafApiAccessor {
   @Override
   public List<Mod> getMods() {
     Player uploader = new Player();
-    return Arrays.asList(
-        new Mod("1", "Mod Number One", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("2", "Mod Number Two", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("3", "Mod Number Three", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("4", "Mod Number Four", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("5", "Mod Number Five", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("6", "Mod Number Six", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("7", "Mod Number Seven", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
-        new Mod("8", "Mod Number Eight", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary())
-    );
+    return List.of();
   }
 
   @Override
   public List<Leaderboard> getLeaderboards() {
-    return List.of(
-        new Leaderboard("1", OffsetDateTime.now(), OffsetDateTime.now(), "mock", "mock", "mock")
-    );
+    return List.of();
   }
 
   @Override
@@ -126,8 +113,8 @@ public class MockFafApiAccessor implements FafApiAccessor {
   }
 
   @Override
-  public List<com.faforever.client.api.dto.FeaturedMod> getFeaturedMods() {
-    com.faforever.client.api.dto.FeaturedMod featuredMod = new com.faforever.client.api.dto.FeaturedMod();
+  public List<com.faforever.commons.api.dto.FeaturedMod> getFeaturedMods() {
+    com.faforever.commons.api.dto.FeaturedMod featuredMod = new com.faforever.commons.api.dto.FeaturedMod();
     featuredMod.setDisplayName("Forged Alliance Forever");
     featuredMod.setTechnicalName("faf");
     featuredMod.setVisible(true);
@@ -217,7 +204,7 @@ public class MockFafApiAccessor implements FafApiAccessor {
   }
 
   @Override
-  public List<com.faforever.client.api.dto.Player> getPlayersByIds(Collection<Integer> playerIds) {
+  public List<Player> getPlayersByIds(Collection<Integer> playerIds) {
     return List.of();
   }
 
